--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,32 @@
 	height: 600px;
 	border: 1px solid #ccc;
 }
+
+.header-container {
+	color: white;
+	width: 100%;
+	height: 40px;
+	background-color: black;
+	border: solid 1px white;
+	margin: 0;
+  }
+  
+  .main-container {
+	display: flex;
+	flex-direction: row;
+  }
+  
+  .editor-section {
+	color: white;
+	width: 60%;
+	height: 100vh;
+	background-color: black;
+	border: solid 1px white;
+  }
+  
+  .preview-section {
+	width: 40%;
+	height: 100vh;
+	background-color: floralwhite;
+	border: solid 1px white;
+  }
