--- a/src/components/index.css
+++ b/src/components/index.css
@@ -1,4 +1,9 @@
 .monaco-container {
     display: flex;
     flex-direction: column;
+    height: 100vh;
+};
+
+.monaco-editor {
+    height: 100%;
 };
