--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,105 @@
-.Editor {
+* {
+	box-sizing: border-box;
+  }
+  
+  body {
+	margin: 0;
+	padding: 0;
+	background: rgb(21, 21, 21);
+	font-family: roboto, sans-serif;
+	min-height: 100%;
+	height: 100%;
+	color: #999;
+	font-size: 16px;
+  }
+  
+  #root {
+	display: flex;
+	flex-direction: column;
+	height: 100%;
+	margin: 0;
+	color: #e6e6e6;
+  }
+  
+  .header-section {
+	border-bottom: 1px solid rgb(52, 52, 52);
+	border-top-color: rgb(52, 52, 52);
+	border-right-color: rgb(52, 52, 52);
+	border-left-color: rgb(52, 52, 52);
+  
+	/* ひとまず */
+	height: 48px;
+  }
+  
+  .main-container {
+	display: flex;
+	flex: 1 1 auto;
+	width: 100%;
+	height: 100%;
+  }
+  
+  /* TODO: position: fixedじゃない方法で並べることはできないか？ */
+  .navigation-section {
+	height: 100vh;
+	padding: 8px;
+	border-right: 1px solid rgb(52, 52, 52);
+	color: rgb(153, 153, 153);
+	font-size: 1.4rem;
+	background-color: rgb(21, 21, 21);
+  }
+  
+  .split-pane {
+	display: flex;
+	height: auto;
+	z-index: 9;
+	width: 100%;
+  }
+  
+  .pane-section {
+	height: 100vh;
+	border-right: 1px solid rgb(52, 52, 52);
+	width: 16%;
+  }
+  
+  .pain2 {
+  }
+  
+  .editor-section {
+	width: 50%;
+	min-width: 100px;
+  }
+  
+  .monaco-container {
+	display: flex;
+	flex-direction: column;
+  }
+  
+  /* .tabs-area {
+	background-color: rgb(21, 21, 21);
+	--title-border-bottom-color: #343434;
+	overflow: hidden;
+	height: 35px;
+  } */
+  
+  .monaco-editor {
+  }
+
+  .preview-section {
+	visibility: visible;
+	max-width: 100%;
+	width: 100%;
+	overflow: hidden;
+	z-index: 0;
+	flex: 1 1 0%;
+	position: relative;
+	outline: none;
+  
+	/* iframe内部だけど */
+	background-color: white;
+  }
+  
+
+/* .Editor {
 	width: 800px;
 	height: 600px;
 	border: 1px solid #ccc;
@@ -31,4 +132,4 @@
 	height: 100vh;
 	background-color: floralwhite;
 	border: solid 1px white;
-  }
+  } */
