--- a/src/index.css
+++ b/src/index.css
@@ -75,8 +75,9 @@
   
   .tabs-area {
 	background-color: rgb(21, 21, 21);
-	--title-border-bottom-color: #343434;
+	--title-border-bottom-color: rgb(52, 52, 52);
 	overflow: hidden;
+	font-size: 14px;
   }
 
   .tab {
@@ -84,16 +85,16 @@
     box-sizing: border-box;
     color: #999;
     padding: 0 8px;
-    border: 1px solid #999;
+    border: 1px solid rgb(52, 52, 52);
     border-bottom: 0;
     cursor: pointer;
     float: left;
 }
 
 .tab.active {
-    color: black;
-    border-bottom: 1px solid white;
-    background-color: violet;
+    color: #ce9178;;
+    border-top: 1px solid #136ab5;
+    background-color: #1e1e1e;
 }
   
   .monaco-editor {
