--- a/src/index.css
+++ b/src/index.css
@@ -1,141 +1,46 @@
-* {
-	box-sizing: border-box;
-  }
-  
-  body {
-	margin: 0;
-	padding: 0;
-	background: rgb(21, 21, 21);
-	font-family: roboto, sans-serif;
-	min-height: 100%;
-	height: 100%;
-	color: #999;
-	font-size: 16px;
-  }
-  
-  #root {
-	display: flex;
-	flex-direction: column;
-	height: 100%;
-	margin: 0;
-	color: #e6e6e6;
-  }
-  
-  .header-section {
-	border-bottom: 1px solid rgb(52, 52, 52);
-	border-top-color: rgb(52, 52, 52);
-	border-right-color: rgb(52, 52, 52);
-	border-left-color: rgb(52, 52, 52);
-  
-	/* ひとまず */
-	height: 48px;
-  }
-  
-  .main-container {
-	display: flex;
-	flex: 1 1 auto;
-	width: 100%;
-	height: 100%;
-  }
-  
-  .navigation-section {
-	height: 100vh;
-	padding: 8px;
-	border-right: 1px solid rgb(52, 52, 52);
-	color: rgb(153, 153, 153);
-	font-size: 1.4rem;
-	background-color: rgb(21, 21, 21);
-  }
-  
-  .split-pane {
-	display: flex;
-	height: auto;
-	z-index: 9;
-	width: 100%;
-  }
-  
-  .pane {
-	height: 100%;
-	border-right: 1px solid rgb(52, 52, 52);
-	margin: 0;
-  }
-  
-  .pain2 {}
-  
-  .editor-section {
-	width: 50%;
-	min-width: 100px;
-  }
-  
-  .monaco-container {
-	display: flex;
-	flex-direction: column;
-	height: 100vh;
-  }
-  
-  .tabs-area {
-	background-color: rgb(21, 21, 21);
-	--title-border-bottom-color: rgb(52, 52, 52);
-	overflow: hidden;
-	font-size: 14px;
-  }
-
-  .tab {
-    line-height: 1.4rem;
-    box-sizing: border-box;
-    color: #999;
-    padding: 0 8px;
-    border: 1px solid rgb(52, 52, 52);
-    border-bottom: 0;
+.folder {
+    margin-top: 6px;
+    background-color: lightgray;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 2px;
+    width: 300px;
     cursor: pointer;
-    float: left;
-}
-
-.tab.active {
-    color: #ce9178;;
-    border-top: 1px solid #136ab5;
-    background-color: #1e1e1e;
-}
-  
-  .monaco-editor {
-	height: 100%;
-  }
-
-  .preview-section {
-	visibility: visible;
-	max-width: 100%;
-	width: 100%;
-	overflow: hidden;
-	z-index: 0;
-	flex: 1 1 0%;
-	position: relative;
-	outline: none;
-  
-	/* iframe内部だけど */
-	background-color: white;
   }
   
-/* custom handle */
-.custom-handle {
-	position: absolute;
-  }
-  .custom-handle:hover {
-	transition: all 0.3s ease;
-	opacity: 0.4;
+  .inputContainer{
+    display: flex;
+    align-items: center;
+    gap: 5px;
   }
   
-  .custom-handle-e {
-	top: 0;
-	right: 0;
-	width: 11px;
-	height: 100%;
-	margin: 0 -5px;
-	border-left: 5px solid transparent;
-	border-right: 5px solid transparent;
-	cursor: col-resize;
+  .inputContainer>span{
+    margin-top: 5px;
   }
   
+  .inputContainer__input {
+    margin: 6px 0 0px 0;
+    padding: 5px;
+    display: flex;
+    border: 1px solid lightgray;
+    align-items: center;
+    justify-content: space-between;
+    cursor: pointer;
+  }
   
-  .custom-handle-e:hover {
-	width: 12px;
+  .folder > span {
+    margin: 0 5px;
+  }
+  
+  .folder > div > button {
+    font-size: 15px;
+    background-color: white;
+  }
+  
+  .file {
+    margin-top: 5px;
+    padding-left: 5px;
+    display: flex;
+    flex-direction: column;
   }
