--- a/src/styles.css
+++ b/src/styles.css
@@ -1,46 +1,113 @@
+* {
+  	box-sizing: border-box;
+  }
+  
+body {
+  margin: 0;
+  padding: 0;
+  background: rgb(21, 21, 21);
+  font-family: roboto, sans-serif;
+  min-height: 100%;
+  height: 100%;
+  color: #999;
+  font-size: 16px;
+}
+
+#root {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  margin: 0;
+  color: #e6e6e6;
+}
+
+/* definitions above are same as development index.css */
+
+
+/* Paneコンポーネントは初期値300pxということで */
+.App {
+  width: 300px;
+}
+
 .folder {
-    margin-top: 6px;
-    background-color: lightgray;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 2px;
-    width: 300px;
-    cursor: pointer;
-  }
-  
-  .inputContainer{
-    display: flex;
-    align-items: center;
-    gap: 5px;
-  }
-  
-  .inputContainer>span{
-    margin-top: 5px;
-  }
-  
-  .inputContainer__input {
-    margin: 6px 0 0px 0;
-    padding: 5px;
-    display: flex;
-    border: 1px solid lightgray;
-    align-items: center;
-    justify-content: space-between;
-    cursor: pointer;
-  }
-  
-  .folder > span {
-    margin: 0 5px;
-  }
-  
-  .folder > div > button {
-    font-size: 15px;
-    background-color: white;
-  }
-  
-  .file {
-    margin-top: 5px;
-    padding-left: 5px;
-    display: flex;
-    flex-direction: column;
-  }
+  display: flex;
+  flex-flow: row nowrap;
+  align-items: center;
+  justify-content: space-between;
+  /* width: 300px; */
+  cursor: pointer;
+  overflow-x: hidden;
+}
+
+
+.inputContainer{
+  display: flex;
+  align-items: center;
+  gap: 5px;
+}
+
+.inputContainer>span{
+  margin-top: 5px;
+}
+
+.inputContainer__input {
+  margin: 6px 0 0px 0;
+  padding: 5px;
+  display: flex;
+  border: 1px solid lightgray;
+  align-items: center;
+  justify-content: space-between;
+  cursor: pointer;
+}
+
+.folder > span {
+  /* margin: 0 5px; */
+  padding-left: calc(1rem - 2px);
+  border-right: 2px solid transparent;
+  min-height: 28px;
+  border-top-color: transparent;
+  border-bottom-color: transparent;
+  border-left-color: transparent;
+  white-space: nowrap;
+}
+
+.folder-function {
+  display: flex;
+  flex-flow: row nowrap;
+  opacity: 0;
+}
+
+
+.folder:hover .folder-function {
+  opacity: 1;
+}
+
+.folder-function > div {
+  padding-left: 0.6rem;
+}
+
+
+.folder > div > button {
+  font-size: 15px;
+  background-color: white;
+}
+
+.file {
+  display: flex;
+  justify-content: space-between;
+}
+
+.file-function {
+  margin: auto 0;
+  opacity: 0;
+}
+
+.file:hover .file-function {
+  opacity: 1;
+}
+
+.file-name {
+  padding-left: calc(1rem - 2px);
+  display: flex;
+  flex-direction: column;
+}
