--- a/src/styles.css
+++ b/src/styles.css
@@ -5,7 +5,8 @@
 body {
   margin: 0;
   padding: 0;
-  background: rgb(21, 21, 21);
+  /* background: rgb(21, 21, 21); */
+  background: rgb(99, 99, 99);
   font-family: roboto, sans-serif;
   min-height: 100%;
   height: 100%;
@@ -27,6 +28,9 @@ body {
 /* Paneコンポーネントは初期値300pxということで */
 .App {
   width: 300px;
+
+  /* temporary */
+  background: rgb(21, 21, 21);
 }
 
 .folder {
@@ -37,6 +41,10 @@ body {
   /* width: 300px; */
   cursor: pointer;
   overflow-x: hidden;
+}
+
+.folder:hover {
+  background-color: rgba(55, 147, 224, 0.25);
 }
 
 
@@ -110,4 +118,14 @@ body {
   padding-left: calc(1rem - 2px);
   display: flex;
   flex-direction: column;
+}
+
+
+.file:hover {
+  background-color: rgba(55, 147, 224, 0.25);
+}
+
+/* draggable */
+.dragging {
+  opacity: 0.5;
 }
