--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -1,16 +1,24 @@
-* {
+*, 
+*::before, 
+*::after {
+	margin: 0;
+	padding: 0;
 	box-sizing: border-box;
+  }
+
+  html {
+    // This defines what 1rem is
+    font-size: 62.5%; //1 rem = 10px; 10px/16px = 62.5%
   }
   
   body {
 	margin: 0;
 	padding: 0;
-	background: rgb(21, 21, 21);
-	font-family: roboto, sans-serif;
+	background: $color-bg-dark;
 	min-height: 100%;
 	height: 100%;
-	color: #999;
-	font-size: 16px;
+	color: $color-font;
+	// font-size: 16px;
   }
   
   #root {
