Feat: implementing new file name validator view 5

--- a/src/sass/components/_fileExplorer.scss
+++ b/src/sass/components/_fileExplorer.scss
@@ -93,34 +93,24 @@
     }
 }
 
-/*
-widthは.inputContainer--inputのwidthと一緒でないといかん
-
-(Pane width) - (
-    tree-column padding-left
-    + inputContainer padding-left
-    + inputContainer--input gap
-    + icon width
-) = inputContainer--input width
-
-tree-column padding-left:   ネストの深さによって動的に決まる
-inputContainer padding-left:上記の定義の通り(1rem - 2px)
-inputContainer--input gap:  上記の定義の通り5px
-icon width:                 どのアイコンかによる。これは固定したいので
-*/ 
+/* 
+前提：width: 100% === inputContainer width
+0.8rem: inputCotnainer padding-left
+21.41px: icon element width
+5px: gap between icon element and input element
+*/
 .inputContainer--validSign {
-    width: calc(100% - 2.64rem - 8px - 5px);
+    width: calc(100% - 0.8rem - 21.41px - 5px);
     position: absolute;
-    /* top等は指定しないこと */
-    margin-left: calc(2.64rem + 8px + 5px);
+    margin-left: calc(21.41px + 5px);
     
-    &__invalid {
+    &.__invalid {
         background-color: red;
         opacity: 0.8;
         border: 1px solid pink;
     }
     
-    &__valid {
+    &.__valid {
         background-color: cyan;
         opacity: 0.8;
         border: 1px solid blue;
