--- a/test-newname-validator/style.css
+++ b/test-newname-validator/style.css
@@ -42,13 +42,14 @@ body {
 
 /* ---- */
 
+/* 
+MAKE SURE YOU'RE SETTING `font-size: 1.6rem;` 
+on parent element style. 
+*/
 
 .treeColumn:hover {
   background-color: rgba(55, 147, 224, 0.25);
 }
-
-
-
 
 .TreeItem {
   display: flex;
@@ -73,7 +74,6 @@ body {
   white-space: nowrap;
 }
 
-
 .TreeItem--function {
   display: flex;
   flex-flow: row nowrap;
@@ -84,27 +84,19 @@ body {
   padding-left: 1rem;
 }
 
-
-
 .treeColumn-icon-name {
   display: flex;
   flex-direction: row;
 }
 
 /* iconを囲うspanに対してstyle={{display: inline-block}}にしているのでwidthが適用されない */
-.treeColumn-icon-name--icon {
-  /* width: 2.1rem; */
-}
+.treeColumn-icon-name--icon {}
 
 .treeColumn-icon-name--name {
   padding-left: 0.8rem;
 }
 
-
-
 .inputContainer {
-  /* blockじゃなくていいなぁ */
-  /* display: block; */
   position: relative;
   padding-left: 1rem;
 }
@@ -146,21 +138,19 @@ body {
   border: 1px solid red;
 }
 
-/* 
-width: 100% === inputContainerのpadding抜きの横幅
 
-margin-left === inputContainer gap + treeContainer-icon-name--icon width
+  /* 
+  To fix width equal to input.inputCotainer--input,
 
-width: calc() === inputContainer gap + treeContainer-icon-name--icon width +
-inputContainer padding-left
-
-NOTE: ただし、treeContainer-icon-name--iconの幅は2.1指定しているのに適用されないからその分ずれる
-計算式は正しい。
-*/
+  - 100%: Equal to div.inputContainer element width ( Excluding its padding-left)
+  - 1.6rem: Equal to icon element width
+  - 0.8rem: Equal to gap of div.inputContainer--input
+  - 1rem: Equal to div.inputContainer padding-left
+  */
 .inputContainer--validSign {
-  width: calc(100% - 2.1rem - 0.8rem - 1rem);
+  width: calc(100% - 1.6rem - 0.8rem - 1rem);
   position: absolute;
-  margin-left: calc(2.1rem + 0.8rem);
+  margin-left: calc(1.6rem + 0.8rem);
   box-sizing: border-box;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
@@ -168,7 +158,7 @@ NOTE: ただし、treeContainer-icon-name--iconの幅は2.1指定しているの
   -ms-box-sizing: border-box;
 }
 
-.inputContainer--validSign.__invalid {
+.inputContainer--validSign:not(:placeholder-shown).__invalid {
   background-color: red;
   opacity: 0.8;
   border: 1px solid pink;
@@ -179,5 +169,3 @@ NOTE: ただし、treeContainer-icon-name--iconの幅は2.1指定しているの
   opacity: 0.8;
   border: 1px solid blue;
 }
-
-
